2008-10-08  David Gilbert  <david.gilbert@object-refinery.com>

    Incorporating patch 2131001:
    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateDomainBounds(XYDataset, boolean)): Ignore Double.NaN values,
    (iterateRangeBounds(CategoryDataset, boolean)): Likewise,
    (findStackedRangeBounds(CategoryDataset, KeyToGroupMap)): Cleanup,
    (findMinimumStackedRangeValue(CategoryDataset)): Likewise,
    (findMaximumStackedRangeValue(CategoryDataset)): Likewise,
    (findCumulativeRangeBounds(CategoryDataset)): Likewise.

2008-10-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/IntervalCategoryToolTipGenerator.java
    (equals): New method override,
    * source/org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (equals): New method override.

2008-10-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawItem): Check item visibility.

2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/Axis.java
    (fireChangeEvent): New method,
    also updated various other methods to call fireChangeEvent().

2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/WaterfallRenderer.java
    (drawItem): Fixed bar misalignment when maxBarWidth is applied.

2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/VectorRenderer.java
    (drawItem): Add chart entity.

2008-09-25  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1934255 (incorporating 1870189):
    * source/org/jfree/chart/axis/Axis.java 
    (minorTickMarksVisible): New field,
    (minorTickMarkInsideLength): New field,
    (minorTickMarkOutsideLength): New field,
    (Axis(String)): Initialise new fields,
    (isMinorTickMarksVisible): New method,
    (setMinorTickMarksVisible): Likewise,